# UDE-Mod

./: AUTHORS  ChangeLog  INSTALL.UDE  INSTALL.redhat  Makefile.am  Makefile.in  NEWS  README.md  REQUIREMENTS  aclocal.m4  config.h.in  configure  configure.ac  ude.spec.in
config/: Makefile.am  Makefile.in  StartScript  StartScript.in  StopScript  appmenu  mountmenu  uwmrc-behaviour.hook  uwmrc-ws.hook
doc/: Makefile.am  Makefile.in  README  l2h.conf  manual.tex
extras/: Makefile.am  Makefile.in
extras/tools/: Makefile.am  Makefile.in
gfx/: Makefile.am  Makefile.in  README  back.xpm  close.xpm  kills.xpm  menus.xpm
po/: ChangeLog  Makevars  POTFILES.in  uwm.pot
ude_config_rename_to_.ude/config/: StartScript  StopScript  appmenu  urdb  uwmrc  uwmrc-behaviour.hook  uwmrc-layout.hook  uwmrc-ws.hook
ude_config_rename_to_.ude/extras/tools/: dirtomenu  dirtomenu-recursive
ude_config_rename_to_.ude/gfx/: autorise.xpm  autorises.xpm  backs.xpm  closes.xpm  iconify.xpm  iconifys.xpm  kill.xpm  menu.xpm  really.xpm  reallys.xpm
uwm/: Makefile.am  Makefile.in  MwmUtil_fixed.h  applications.c  applications.h  handlers.c  handlers.h  i18n.h  init.c  init.h  menu.c  menu.h  move.c  move.h  nodes.c  nodes.h  pix.c  pix.h  placement.c  placement.h  properties.c  properties.h  resize.c  resize.h  rubber.c  rubber.h  selection.c  selection.h  special.c  special.h  urm.c  urm.h  uwm.c  uwm.h  uwmmenu.c  uwmmenu.h  widgets.c  widgets.h  windows.c  windows.h  (+8 more)
